--- a/css/style.css
+++ b/css/style.css
@@ -22,12 +22,13 @@
     text-decoration: none;
     font-size: 1.2rem;
     color: rgb(97, 97, 97);
-    transition: .3s ease-in-out;
+    transition: .2s ease-in;
 }
 
 .readmorelink:hover {
     color: black;
-    font-size: 1.3rem;
+    font-size: 1.25rem;
+    font-weight: 400
 }
 
 
