changed styles and slight changes on index

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 .nav-item {
-    padding-right: 1.2rem;
+    /* padding-right: .8rem; */
 }
 
 .carousel-item,
@@ -54,25 +54,6 @@
     color: white;
 }
 
-#topBtn {
-    display: none;
-    position: fixed;
-    bottom: 30px;
-    right: 40px;
-    cursor: pointer;
-    z-index: 99;
-    border: none;
-    outline: none;
-    background-color: black;
-    color: white;
-    font-size: 1.2rem;
-    border-radius: 4rem;
-    padding: 1rem;
-}
-
-#topBtn:hover {
-    background-color: rgb(40, 40, 40);
-}
 
 
 
@@ -111,21 +92,6 @@
         width: 100%;
     }
 
-    #topBtn {
-        display: none;
-        position: fixed;
-        bottom: 30px;
-        right: 40px;
-        cursor: pointer;
-        z-index: 99;
-        border: none;
-        outline: none;
-        background-color: black;
-        color: white;
-        font-size: .9rem;
-        border-radius: 4rem;
-        padding: .8rem;
-    }
 }
 
 @media only screen and (max-width: 991px) {
