--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 .nav-item {
-    /* padding-right: .8rem; */
+    padding-right: .8rem;
 }
 
 .carousel-item,
@@ -45,6 +45,59 @@
     width: 100%;
 }
 
+.placescontent h1,
+p {
+    padding-left: 1.2rem;
+}
+
+.placescontent img {
+    margin-left: .8rem;
+}
+
+
+
+#explorecard button {
+    border-radius: 4px;
+    background-color: rgb(255, 255, 255);
+    border: none;
+    color: #000000;
+    text-align: center;
+    font-size: 25px;
+    padding: 12px;
+    width: 210px;
+    transition: all 0.5s;
+    cursor: pointer;
+    box-shadow: 0 10px 20px -8px rgba(0, 0, 0, .7);
+}
+
+#explorecard button {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+}
+
+#explorecard button:after {
+    content: '»';
+    position: absolute;
+    opacity: 0;
+    top: 10px;
+    right: -20px;
+    transition: 0.5s;
+}
+
+#explorecard button:hover {
+    padding-right: 24px;
+    padding-left: 8px;
+    background-color: rgb(234, 196, 5);
+}
+
+#explorecard button:hover:after {
+    opacity: 1;
+    right: 10px;
+}
+
+
 .footersection ul li {
     list-style-type: none;
 }
@@ -65,6 +118,7 @@
     .carousel-item img {
         height: 400px;
     }
+
 }
 
 @media only screen and (max-width: 768px) {
@@ -92,10 +146,15 @@
         width: 100%;
     }
 
+    .placescontent .container-fluid {
+        text-align: center;
+    }
+
 }
 
 @media only screen and (max-width: 991px) {
     .welcome .card {
         margin-bottom: 1.5rem;
     }
+
 }
